Completed the working on Projects.html Page

--- a/courses.html
+++ b/courses.html
@@ -80,6 +80,11 @@
                 </div>
             </div>
             <h1>Courses</h1>
+
+            <div class="courses-page">
+
+            </div>
+
         </main>
 
     </div>
