--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,150 @@
             <h1>Projects</h1>
 
             <div class="project-page">
-                
+
+                <div class="box">
+                    <p>Obito Dashboard</p>
+                    <p>Lorem ipsum dolor sit amet</p>
+                    <div class="info">
+                        <div class="pics">
+                            <img src="imgs/avatar.png" alt="">
+                            <img src="imgs/avatar.png" alt="">
+                            <img src="imgs/avatar.png" alt="">
+                            <img src="imgs/avatar.png" alt="">
+                        </div>
+                        <div class="types">
+                            <span>Programming</span>
+                            <span>Design</span>
+                            <span>Hosting</span>
+                            <span>Marketing</span>
+                        </div>
+                        <div class="ph-pr">
+                            <div class="prog-holder">
+                                <span style="width: 80%;"></span>
+                            </div>
+                            <span>$ 2500</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <p>Obito Dashboard</p>
+                    <p>Lorem ipsum dolor sit amet</p>
+                    <div class="info">
+                        <div class="pics">
+                            <img src="imgs/avatar.png" alt="">
+                            <img src="imgs/avatar.png" alt="">
+                            <img src="imgs/avatar.png" alt="">
+                            <img src="imgs/avatar.png" alt="">
+                        </div>
+                        <div class="types">
+                            <span>Programming</span>
+                            <span>Design</span>
+                            <span>Hosting</span>
+                            <span>Marketing</span>
+                        </div>
+                        <div class="ph-pr">
+                            <div class="prog-holder">
+                                <span style="width: 80%;"></span>
+                            </div>
+                            <span>$ 2500</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <p>Obito Dashboard</p>
+                    <p>Lorem ipsum dolor sit amet</p>
+                    <div class="info">
+                        <div class="pics">
+                            <img src="imgs/avatar.png" alt="">
+                            <img src="imgs/avatar.png" alt="">
+                            <img src="imgs/avatar.png" alt="">
+                            <img src="imgs/avatar.png" alt="">
+                        </div>
+                        <div class="types">
+                            <span>Programming</span>
+                            <span>Design</span>
+                        </div>
+                        <div class="ph-pr">
+                            <div class="prog-holder">
+                                <span style="width: 80%;"></span>
+                            </div>
+                            <span>$ 2500</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <p>Obito Dashboard</p>
+                    <p>Lorem ipsum dolor sit amet</p>
+                    <div class="info">
+                        <div class="pics">
+                            <img src="imgs/avatar.png" alt="">
+                            <img src="imgs/avatar.png" alt="">
+                            <img src="imgs/avatar.png" alt="">
+                            <img src="imgs/avatar.png" alt="">
+                        </div>
+                        <div class="types">
+                            <span>Programming</span>
+                            <span>Writing</span>
+                            <span>SoftSkills</span>
+                        </div>
+                        <div class="ph-pr">
+                            <div class="prog-holder">
+                                <span style="width: 80%;"></span>
+                            </div>
+                            <span>$ 2500</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <p>Obito Dashboard</p>
+                    <p>Lorem ipsum dolor sit amet</p>
+                    <div class="info">
+                        <div class="pics">
+                            <img src="imgs/avatar.png" alt="">
+                            <img src="imgs/avatar.png" alt="">
+                            <img src="imgs/avatar.png" alt="">
+                            <img src="imgs/avatar.png" alt="">
+                        </div>
+                        <div class="types">
+                            <span>Programming</span>
+                            <span>Design</span>
+                            <span>Hosting</span>
+                            <span>Marketing</span>
+                        </div>
+                        <div class="ph-pr">
+                            <div class="prog-holder">
+                                <span style="width: 80%;"></span>
+                            </div>
+                            <span>$ 2500</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <p>Obito Dashboard</p>
+                    <p>Lorem ipsum dolor sit amet</p>
+                    <div class="info">
+                        <div class="pics">
+                            <img src="imgs/avatar.png" alt="">
+                            <img src="imgs/avatar.png" alt="">
+                            <img src="imgs/avatar.png" alt="">
+                            <img src="imgs/avatar.png" alt="">
+                        </div>
+                        <div class="types">
+                            <span>Programming</span>
+                            <span>Design</span>
+                            <span>Hosting</span>
+                            <span>Marketing</span>
+                        </div>
+                        <div class="ph-pr">
+                            <div class="prog-holder">
+                                <span style="width: 80%;"></span>
+                            </div>
+                            <span>$ 2500</span>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </main>
 
