completed the work on Courses page

--- a/courses.html
+++ b/courses.html
@@ -83,6 +83,121 @@
 
             <div class="courses-page">
 
+                <div class="box">
+                    <img src="imgs/course-01.jpg" alt="">
+                    <img src="imgs/avatar.png" alt="">
+                    <div class="cr-info">
+                        <h4>Mastering Web design</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis explicabo praesentium
+                            voluptatibus vitae exercitationem.</p>
+                        <div class="ab">
+                            <a href="#">Course Info</a>
+                            <span><i class="fa-regular fa-user"></i> 1103</span>
+                            <span>$ 150</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <img src="imgs/course-02.jpg" alt="">
+                    <img src="imgs/avatar.png" alt="">
+                    <div class="cr-info">
+                        <h4>Data Structure and Algorithms</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis explicabo praesentium
+                            voluptatibus vitae exercitationem.</p>
+                        <div class="ab">
+                            <a href="#">Course Info</a>
+                            <span><i class="fa-regular fa-user"></i> 1103</span>
+                            <span>$ 150</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <img src="imgs/course-03.jpg" alt="">
+                    <img src="imgs/avatar.png" alt="">
+                    <div class="cr-info">
+                        <h4>Responsive Web design</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis explicabo praesentium
+                            voluptatibus vitae exercitationem.</p>
+                        <div class="ab">
+                            <a href="#">Course Info</a>
+                            <span><i class="fa-regular fa-user"></i> 1103</span>
+                            <span>$ 150</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="imgs/course-04.jpg" alt="">
+                    <img src="imgs/avatar.png" alt="">
+                    <div class="cr-info">
+                        <h4>Mastering Pythone</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis explicabo praesentium
+                            voluptatibus vitae exercitationem.</p>
+                        <div class="ab">
+                            <a href="#">Course Info</a>
+                            <span><i class="fa-regular fa-user"></i> 1103</span>
+                            <span>$ 150</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="imgs/course-05.jpg" alt="">
+                    <img src="imgs/avatar.png" alt="">
+                    <div class="cr-info">
+                        <h4>PhP Exampels</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis explicabo praesentium
+                            voluptatibus vitae exercitationem.</p>
+                        <div class="ab">
+                            <a href="#">Course Info</a>
+                            <span><i class="fa-regular fa-user"></i> 1103</span>
+                            <span>$ 150</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="imgs/course-05.jpg" alt="">
+                    <img src="imgs/avatar.png" alt="">
+                    <div class="cr-info">
+                        <h4>Data Science</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis explicabo praesentium
+                            voluptatibus vitae exercitationem.</p>
+                        <div class="ab">
+                            <a href="#">Course Info</a>
+                            <span><i class="fa-regular fa-user"></i> 1103</span>
+                            <span>$ 150</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="imgs/course-03.jpg" alt="">
+                    <img src="imgs/avatar.png" alt="">
+                    <div class="cr-info">
+                        <h4>Javascript</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis explicabo praesentium
+                            voluptatibus vitae exercitationem.</p>
+                        <div class="ab">
+                            <a href="#">Course Info</a>
+                            <span><i class="fa-regular fa-user"></i> 1103</span>
+                            <span>$ 150</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="imgs/course-01.jpg" alt="">
+                    <img src="imgs/avatar.png" alt="">
+                    <div class="cr-info">
+                        <h4>Typescript</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis explicabo praesentium
+                            voluptatibus vitae exercitationem.</p>
+                        <div class="ab">
+                            <a href="#">Course Info</a>
+                            <span><i class="fa-regular fa-user"></i> 1103</span>
+                            <span>$ 150</span>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
         </main>
