--- a/friends.html
+++ b/friends.html
@@ -80,6 +80,10 @@
                 </div>
             </div>
             <h1>Friends</h1>
+
+            <div class="friends-page">
+                
+            </div>
         </main>
 
     </div>
