The Template is finished

--- a/file.html
+++ b/file.html
@@ -80,6 +80,231 @@
                 </div>
             </div>
             <h1>Files</h1>
+
+            <div class="files-page">
+
+                <div class="files">
+
+                    <div class="box">
+                        <div class="pre">
+                            <i class="fa-solid fa-download fa-fw"></i>
+                            <img src="imgs/pdf.svg" alt="">
+                            <p>My-File.pdf</p>
+                            <span>Obito</span>
+                        </div>
+                        <div class="data">
+                            <span>20/07/2020</span>
+                            <span>5.5MB</span>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="pre">
+                            <i class="fa-solid fa-download fa-fw"></i>
+                            <img src="imgs/eps.svg" alt="">
+                            <p>My-File.eps</p>
+                            <span>admin</span>
+                        </div>
+                        <div class="data">
+                            <span>20/07/2020</span>
+                            <span>10.5MB</span>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="pre">
+                            <i class="fa-solid fa-download fa-fw"></i>
+                            <img src="imgs/dll.svg" alt="">
+                            <p>My-File.dll</p>
+                            <span>Uploader</span>
+                        </div>
+                        <div class="data">
+                            <span>20/07/2020</span>
+                            <span>32.5MB</span>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="pre">
+                            <i class="fa-solid fa-download fa-fw"></i>
+                            <img src="imgs/pdf.svg" alt="">
+                            <p>My-File.pdf</p>
+                            <span>Obito</span>
+                        </div>
+                        <div class="data">
+                            <span>20/07/2020</span>
+                            <span>5.5MB</span>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="pre">
+                            <i class="fa-solid fa-download fa-fw"></i>
+                            <img src="imgs/eps.svg" alt="">
+                            <p>My-File.eps</p>
+                            <span>admin</span>
+                        </div>
+                        <div class="data">
+                            <span>20/07/2020</span>
+                            <span>10.5MB</span>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="pre">
+                            <i class="fa-solid fa-download fa-fw"></i>
+                            <img src="imgs/dll.svg" alt="">
+                            <p>My-File.dll</p>
+                            <span>Uploader</span>
+                        </div>
+                        <div class="data">
+                            <span>20/07/2020</span>
+                            <span>32.5MB</span>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="pre">
+                            <i class="fa-solid fa-download fa-fw"></i>
+                            <img src="imgs/pdf.svg" alt="">
+                            <p>My-File.pdf</p>
+                            <span>Obito</span>
+                        </div>
+                        <div class="data">
+                            <span>20/07/2020</span>
+                            <span>5.5MB</span>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="pre">
+                            <i class="fa-solid fa-download fa-fw"></i>
+                            <img src="imgs/eps.svg" alt="">
+                            <p>My-File.eps</p>
+                            <span>admin</span>
+                        </div>
+                        <div class="data">
+                            <span>20/07/2020</span>
+                            <span>10.5MB</span>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="pre">
+                            <i class="fa-solid fa-download fa-fw"></i>
+                            <img src="imgs/dll.svg" alt="">
+                            <p>My-File.dll</p>
+                            <span>Uploader</span>
+                        </div>
+                        <div class="data">
+                            <span>20/07/2020</span>
+                            <span>32.5MB</span>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="pre">
+                            <i class="fa-solid fa-download fa-fw"></i>
+                            <img src="imgs/pdf.svg" alt="">
+                            <p>My-File.pdf</p>
+                            <span>Obito</span>
+                        </div>
+                        <div class="data">
+                            <span>20/07/2020</span>
+                            <span>5.5MB</span>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="pre">
+                            <i class="fa-solid fa-download fa-fw"></i>
+                            <img src="imgs/eps.svg" alt="">
+                            <p>My-File.eps</p>
+                            <span>admin</span>
+                        </div>
+                        <div class="data">
+                            <span>20/07/2020</span>
+                            <span>10.5MB</span>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="pre">
+                            <i class="fa-solid fa-download fa-fw"></i>
+                            <img src="imgs/dll.svg" alt="">
+                            <p>My-File.dll</p>
+                            <span>Uploader</span>
+                        </div>
+                        <div class="data">
+                            <span>20/07/2020</span>
+                            <span>32.5MB</span>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="pre">
+                            <i class="fa-solid fa-download fa-fw"></i>
+                            <img src="imgs/pdf.svg" alt="">
+                            <p>My-File.pdf</p>
+                            <span>Obito</span>
+                        </div>
+                        <div class="data">
+                            <span>20/07/2020</span>
+                            <span>5.5MB</span>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="pre">
+                            <i class="fa-solid fa-download fa-fw"></i>
+                            <img src="imgs/eps.svg" alt="">
+                            <p>My-File.eps</p>
+                            <span>admin</span>
+                        </div>
+                        <div class="data">
+                            <span>20/07/2020</span>
+                            <span>10.5MB</span>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="pre">
+                            <i class="fa-solid fa-download fa-fw"></i>
+                            <img src="imgs/dll.svg" alt="">
+                            <p>My-File.dll</p>
+                            <span>Uploader</span>
+                        </div>
+                        <div class="data">
+                            <span>20/07/2020</span>
+                            <span>32.5MB</span>
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <div class="file-stats">
+
+                    <h3 class="titel">Files Statistics</h3>
+
+                    <div class="holder-f">
+                        <div class="infos">
+                            <p>PDF Files <br> <span>130</span> </p>
+                        </div>
+                        <div class="size">6.5GB</div>
+                    </div>
+
+                    <div class="holder-f">
+                        <div class="infos">
+                            <p>Images <br> <span>115 files</span> </p>
+                        </div>
+                        <div class="size">3.5GB</div>
+                    </div>
+
+                    <div class="holder-f">
+                        <div class="infos">
+                            <p>Word files<br> <span>110 files</span> </p>
+                        </div>
+                        <div class="size">3.2GB</div>
+                    </div>
+
+                    <div class="holder-f">
+                        <div class="infos">
+                            <p>CSV<br> <span>99 files</span> </p>
+                        </div>
+                        <div class="size">2.2GB</div>
+                    </div>
+                    <a href="#"><i class="fa-solid fa-angles-up"></i> Upload</a>
+                </div>
+
+            </div>
+
         </main>
 
     </div>
