--- a/friends.html
+++ b/friends.html
@@ -82,7 +82,171 @@
             <h1>Friends</h1>
 
             <div class="friends-page">
+
+                <div class="box">
+                    <div class="head-fr">
+                        <div class="contact">
+                            <a href="#"><i class="fa-solid fa-phone fa-fw"></i></a>
+                            <a href="#"><i class="fa-regular fa-envelope fa-fw"></i></a>
+                        </div>
+                        <img src="imgs/friend-01.jpg" alt="">
+                        <h4>Ahmed Mustafa</h4>
+                        <p>Javascript Developer</p>
+                    </div>
+                    <div class="body-fr">
+                        <div><i class="fa-regular fa-face-smile fa-fw"></i>99 Friend</div>
+                        <div><i class="fa-solid fa-code-commit fa-fw"></i>18 Project</div>
+                        <div><i class="fa-regular fa-newspaper fa-fw"></i>12 Article</div>
+                    </div>
+                    <div class="foot-fr">
+                        <p>Joined 02/04/2019</p>
+                        <div class="btns">
+                            <a href="#">Profile</a>
+                            <a href="#">Remove</a>
+                        </div>
+                    </div>
+                </div>
                 
+                <div class="box">
+                    <div class="head-fr">
+                        <div class="contact">
+                            <a href="#"><i class="fa-solid fa-phone fa-fw"></i></a>
+                            <a href="#"><i class="fa-regular fa-envelope fa-fw"></i></a>
+                        </div>
+                        <img src="imgs/friend-02.jpg" alt="">
+                        <h4>Obito Uchiha</h4>
+                        <p>Konoha Developer</p>
+                    </div>
+                    <div class="body-fr">
+                        <div><i class="fa-regular fa-face-smile fa-fw"></i>99 Friend</div>
+                        <div><i class="fa-solid fa-code-commit fa-fw"></i>18 Project</div>
+                        <div><i class="fa-regular fa-newspaper fa-fw"></i>12 Article</div>
+                    </div>
+                    <div class="foot-fr">
+                        <p>Joined 02/04/2019</p>
+                        <div class="btns">
+                            <a href="#">Profile</a>
+                            <a href="#">Remove</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="head-fr">
+                        <div class="contact">
+                            <a href="#"><i class="fa-solid fa-phone fa-fw"></i></a>
+                            <a href="#"><i class="fa-regular fa-envelope fa-fw"></i></a>
+                        </div>
+                        <img src="imgs/friend-03.jpg" alt="">
+                        <h4>Kamado Tanjiro</h4>
+                        <p>Katana instratore</p>
+                    </div>
+                    <div class="body-fr">
+                        <div><i class="fa-regular fa-face-smile fa-fw"></i>99 Friend</div>
+                        <div><i class="fa-solid fa-code-commit fa-fw"></i>18 Project</div>
+                        <div><i class="fa-regular fa-newspaper fa-fw"></i>12 Article</div>
+                    </div>
+                    <div class="foot-fr">
+                        <p>Joined 02/04/2019</p>
+                        <div class="btns">
+                            <a href="#">Profile</a>
+                            <a href="#">Remove</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="head-fr">
+                        <div class="contact">
+                            <a href="#"><i class="fa-solid fa-phone fa-fw"></i></a>
+                            <a href="#"><i class="fa-regular fa-envelope fa-fw"></i></a>
+                        </div>
+                        <img src="imgs/friend-03.jpg" alt="">
+                        <h4>Madara Uchiha</h4>
+                        <p>Akatsuke Leader</p>
+                    </div>
+                    <div class="body-fr">
+                        <div><i class="fa-regular fa-face-smile fa-fw"></i>99 Friend</div>
+                        <div><i class="fa-solid fa-code-commit fa-fw"></i>18 Project</div>
+                        <div><i class="fa-regular fa-newspaper fa-fw"></i>12 Article</div>
+                    </div>
+                    <div class="foot-fr">
+                        <p>Joined 02/04/2019</p>
+                        <div class="btns">
+                            <a href="#">Profile</a>
+                            <a href="#">Remove</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="head-fr">
+                        <div class="contact">
+                            <a href="#"><i class="fa-solid fa-phone fa-fw"></i></a>
+                            <a href="#"><i class="fa-regular fa-envelope fa-fw"></i></a>
+                        </div>
+                        <img src="imgs/friend-03.jpg" alt="">
+                        <h4>Naruto Uzumaki</h4>
+                        <p>Hero of Konoha</p>
+                    </div>
+                    <div class="body-fr">
+                        <div><i class="fa-regular fa-face-smile fa-fw"></i>99 Friend</div>
+                        <div><i class="fa-solid fa-code-commit fa-fw"></i>18 Project</div>
+                        <div><i class="fa-regular fa-newspaper fa-fw"></i>12 Article</div>
+                    </div>
+                    <div class="foot-fr">
+                        <p>Joined 02/04/2019</p>
+                        <div class="btns">
+                            <a href="#">Profile</a>
+                            <a href="#">Remove</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="head-fr">
+                        <div class="contact">
+                            <a href="#"><i class="fa-solid fa-phone fa-fw"></i></a>
+                            <a href="#"><i class="fa-regular fa-envelope fa-fw"></i></a>
+                        </div>
+                        <img src="imgs/friend-03.jpg" alt="">
+                        <h4>Madara Uchiha</h4>
+                        <p>Akatsuke Leader</p>
+                    </div>
+                    <div class="body-fr">
+                        <div><i class="fa-regular fa-face-smile fa-fw"></i>99 Friend</div>
+                        <div><i class="fa-solid fa-code-commit fa-fw"></i>18 Project</div>
+                        <div><i class="fa-regular fa-newspaper fa-fw"></i>12 Article</div>
+                    </div>
+                    <div class="foot-fr">
+                        <p>Joined 02/04/2019</p>
+                        <div class="btns">
+                            <a href="#">Profile</a>
+                            <a href="#">Remove</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="head-fr">
+                        <div class="contact">
+                            <a href="#"><i class="fa-solid fa-phone fa-fw"></i></a>
+                            <a href="#"><i class="fa-regular fa-envelope fa-fw"></i></a>
+                        </div>
+                        <img src="imgs/friend-03.jpg" alt="">
+                        <h4>Madara Uchiha</h4>
+                        <p>Akatsuke Leader</p>
+                    </div>
+                    <div class="body-fr">
+                        <div><i class="fa-regular fa-face-smile fa-fw"></i>99 Friend</div>
+                        <div><i class="fa-solid fa-code-commit fa-fw"></i>18 Project</div>
+                        <div><i class="fa-regular fa-newspaper fa-fw"></i>12 Article</div>
+                    </div>
+                    <div class="foot-fr">
+                        <p>Joined 02/04/2019</p>
+                        <div class="btns">
+                            <a href="#">Profile</a>
+                            <a href="#">Remove</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </main>
 
