--- a/plans.html
+++ b/plans.html
@@ -80,6 +80,147 @@
                 </div>
             </div>
             <h1>Plans</h1>
+
+            <div class="plans-page">
+                <div class="box">
+                    <div class="top">
+                        <p>Free</p>
+                        <div class="price">0.00</div>
+                    </div>
+                    <div class="features">
+                        <p>
+                            <i class="fa-solid fa-check fa-fw"></i>
+                            Access all text leasons
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-check fa-fw"></i>
+                            Access all videos lessons
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-check fa-fw"></i>
+                            Appear on leaderboard
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-xmark fa-fw"></i>
+                            Browse content without ads
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-xmark fa-fw"></i>
+                            Access all asignments
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-xmark fa-fw"></i>
+                            Get daily prizes
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-xmark fa-fw"></i>
+                            Earn Certificate
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-xmark fa-fw"></i>
+                            1GB space for hosting Files
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-xmark fa-fw"></i>
+                            Access badge system
+                        </p>
+                        <a href="#">Join</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="top">
+                        <p>Basic</p>
+                        <div class="price">9.99</div>
+                    </div>
+                    <div class="features">
+                        <p>
+                            <i class="fa-solid fa-check fa-fw"></i>
+                            Access all text leasons
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-check fa-fw"></i>
+                            Access all videos lessons
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-check fa-fw"></i>
+                            Appear on leaderboard
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-check fa-fw"></i>
+                            Browse content without ads
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-check fa-fw"></i>
+                            Access all asignments
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-check fa-fw"></i>
+                            Get daily prizes
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-check fa-fw"></i>
+                            Earn Certificate
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-xmark fa-fw"></i>
+                            1GB space for hosting Files
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-xmark fa-fw"></i>
+                            Access badge system
+                        </p>
+                        <a href="#">Join</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="top">
+                        <p>Premium</p>
+                        <div class="price">19.99</div>
+                    </div>
+                    <div class="features">
+                        <p>
+                            <i class="fa-solid fa-check fa-fw"></i>
+                            Access all text leasons
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-check fa-fw"></i>
+                            Access all videos lessons
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-check fa-fw"></i>
+                            Appear on leaderboard
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-check fa-fw"></i>
+                            Browse content without ads
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-check fa-fw"></i>
+                            Access all asignments
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-check fa-fw"></i>
+                            Get daily prizes
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-check fa-fw"></i>
+                            Earn Certificate
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-check fa-fw"></i>
+                            1GB space for hosting Files
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-check fa-fw"></i>
+                            Access badge system
+                        </p>
+                        <div class="notation">
+                            This is your current plan
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </main>
 
     </div>
